--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -9,6 +9,10 @@
   );
   padding: 8rem 2rem;
   clip-path: polygon(0 0, 50% 5%, 100% 0, 100% 95%, 50% 100%, 0 95%);
+
+  @media only screen and (max-width: 750px) {
+    clip-path: polygon(0 0, 50% 1.5%, 100% 0, 100% 98.5%, 50% 100%, 0 98.5%);
+  }
 }
 
 .projects {
@@ -16,6 +20,10 @@
   justify-content: space-around;
   align-items: flex-start;
   flex-wrap: wrap;
+
+  @media only screen and (max-width: 750px) {
+    justify-content: center;
+  }
 }
 
 .projects__heading {
@@ -79,6 +87,7 @@
     position: absolute;
     bottom: 10px;
     display: flex;
+    flex-wrap: wrap;
     padding-bottom: 1rem;
 
     & > a:not(:last-child) {
