--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,11 @@
 // Base reset
 html {
   box-sizing: border-box;
+
+  font-size: 100%;
+  @media only screen and (max-width: 750px) {
+    font-size: 92.5%;
+  }
 }
 
 *,
